--- a/src/App.css
+++ b/src/App.css
@@ -4,26 +4,32 @@ body {
   background-size: cover;
   color: white;
 }
+.bodyM {
+  display: none;
+}
 
 .body h1 {
   font-family: 'Julius Sans One';
   font-weight: 100;
   font-size: 40px;
-  margin-left: 20%;
+  margin-left: 460px;
 }
 
+.bodyM h1 {
+  font-family: 'Julius Sans One';
+  font-weight: 100;
+  font-size: 30px;
+  margin-left: 12%;
+}
 .main {
   display: flex;
-  width: 70%;
+  width: 85%;
   margin: 0 auto;
 }
 
 .main img {
-  height: 250px;
-}
-
-.main img:hover {
-  opacity: 0%;
+  margin-top: -50px;
+  height: 350px;
 }
 
 .main p {
@@ -33,23 +39,26 @@ body {
 }
 
 .links a {
-  margin-left: 10%;
+  margin-left: 7%;
+  margin-right: 5%;
   font-size: 25px;
   font-family: 'Julius Sans One';
   color: white;
   text-decoration: none;
 }
 
-.body div a:hover {
-  font-size: 27px;
-} 
+.links a:hover {
+  border-bottom: solid;
+  border-width: 1px;
+}
 
 .links {
+  margin-top: 40px;
   text-align: center;
 }
 
 .container {
-  margin-top: 12%;
+  margin-top: 8%;
 }
 
 .card {
@@ -68,6 +77,19 @@ ul {
   line-height: 50px;
   margin-top: 15%;
   padding-right: 10%;
+}
+.p3 { 
+  font-size: 20px;
+  font-family: 'open sans';
+  padding-bottom: 20px;
+}
+.p3 a{
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
+}
+.p3 a:hover {
+  text-decoration: underline;
 }
 
 li {
@@ -105,21 +127,15 @@ li button:hover {
 .project {
   text-align: center;
   width: 100%;
-  
   padding-bottom: 40px;
 }
 
 .project h2 {
+  padding-top: 60px;
   font-family: 'Julius Sans One';
   font-weight: 100;
   font-size: 50px;
-}
-
-.project a {
-  border-bottom: solid;
-  border-color: white;
-  border-width: 1px;
-  padding-bottom: 40px;
+  margin-bottom: -10px;
 }
 
 .return {
@@ -129,5 +145,32 @@ li button:hover {
 }
 
 .returnImg {
-  height: 100px;
+  height: 40px;
+}
+.returnImg:hover {
+  height: 42px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .g7 {
+    width: 125%;
+  }
+  .return {
+    margin-left: -90px;
+    margin-top: -120px;
+  }
+  .bodyM {
+    display: block;
+  }
+  .body {
+    display: none;
+  }
+  .main {
+    display: block;
+    text-align: center;
+  }
+  .main img {
+    height: 250px;
+    margin-top: 0px;
+  }
 }
