--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,11 @@ li button:hover {
 
 @media only screen and (max-width: 1000px) {
   .g7 {
-    width: 125%;
+    width: 100%;
+  }
+  .projectImg {
+    width: 100%;
+    height: 100%;
   }
   .return {
     margin-left: -90px;
